# UniAPI

./: .gitignore  .gitmodules  CMakeLists.txt  Config.yaml  Dockerfile  LICENSE  ReadME.md  ReadME_EN.md  ReadME_JP.md  main.cpp
.github/workflows/: docker-image.yml
include/: ChatBot.h  Configure.h  Logger.h  Utils.h
include/Impls/: ChatGPT_Impl.h  Claude_Impl.h  CustomRule_Impl.h  Gemini_Impl.h  LLama_Impl.h
src/: Logger.cpp  Utils.cpp
src/Impls/: ChatGPT_Impl.cpp  Claude_Impl.cpp  CustomRule_Impl.cpp  Gemini_Impl.cpp  LLama_Impl.cpp
